--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 html {
     height: 100%;
+    box-sizing: border-box;
 }
 
 body {
@@ -29,6 +30,48 @@ body {
     border-radius: 20px;
     visibility: hidden;
     border: solid black 3px;
+    max-height: 80%;
+    width: 400px;
+    overflow: auto;
+}
+
+#panneau-config ul {
+    padding: 0;
+    margin: 0;
+}
+
+#panneau-config ul li {
+    list-style-type: none;
+    padding: 5px;
+}
+
+#liste-zap {
+    text-align: center;
+}
+
+#liste-zap li {
+    display: inline-block;
+    vertical-align: top;
+    width: 45%;
+    margin: 10px 1%;
+    background-color: #aaaaaa;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+#liste-zap li:hover {
+    background-color: #333;
+    color: #aaa;
+}
+
+@media only screen and (max-width: 480px) {
+    #liste-zap li {
+        width: 95%;
+    }
+}
+
+#panneau-config ul li input {
+    margin-right: 5px;
 }
 
 .succes {
